RESOLVED FIXED258957
AR View closes instead of showing 3D asset - MobileSafari Crashing at -[_WKSystemPreviewDataTaskDelegate dataTask:didCompleteWithError:] + 32
https://bugs.webkit.org/show_bug.cgi?id=258957
Summary AR View closes instead of showing 3D asset - MobileSafari Crashing at -[_WKSy...
Dean Jackson
Reported 2023-07-06 18:17:49 PDT
AR View closes instead of showing 3D asset - MobileSafari Crashing at -[_WKSystemPreviewDataTaskDelegate dataTask:didCompleteWithError:] + 32
Attachments
Dean Jackson
Comment 1 2023-07-06 18:17:55 PDT
Dean Jackson
Comment 2 2023-07-06 18:18:43 PDT
Alexey Proskuryakov
Comment 3 2023-07-12 12:59:18 PDT
*** Bug 259141 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2023-07-13 14:35:54 PDT
Committed 266048@main (c7ca29832dcb): <https://commits.webkit.org/266048@main> Reviewed commits have been landed. Closing PR #15620 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.