Cherry-pick c7ca29832dcb. rdar://problem/110671973

AR View closes instead of showing 3D asset - MobileSafari Crashing at -[_WKSystemPreviewDataTaskDelegate dataTask:didCompleteWithError:] + 32
    https://bugs.webkit.org/show_bug.cgi?id=258957
    rdar://110671973

    Reviewed by Tim Horton.

    When we try to load a `blob:` URL, the WKDataTask instantly fails. This
    causes us to try to close a file handle that hasn't been initialised.
    Add a check to make sure that doesn't happen.

    There is still the bigger bug of needing to actually load blob URLs.

    * Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/SystemPreview.mm:
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/system-preview.html:

    Canonical link: https://commits.webkit.org/266048@main

Identifier: 265870.114@safari-7616-branch